<resources>
    <string name="app_name">Öğrenci Ajandası</string>
    <string name="action">Günlük</string>
    <string name="action1">Haftalık</string>
    <string name="action2">Aylık</string>
    <string name="action3">Çıkış</string>
    <string name="_10">10</string>
    <string name="a_ustos">Ağustos</string>
    <string name="_2020">2020</string>
    <string name="renci_ajandas">Öğrenci Ajandası</string>
    <string name="yap_lacaklar">Yapılacaklar</string>
    <string name="ekle">+</string>
    <string name="date">Date</string>
    <string name="kullan_c_ad">Kullanıcı Adı</string>
    <string name="ifre">Şifre</string>
    <string name="giri_yap">Giriş Yap</string>
    <string name="giri_yap_lamad">Giriş Yapılamadı!</string>
    <string name="kay_t_ol">Kayıt Ol!</string>
    <string name="ogrenci_ajandasi">Öğrenci Ajandası</string>
    <string name="sifre_dogrulama">Şifre Doğrulama</string>
    <string name="zaten_kayitliyim">Zaten Kayıtlıyım!</string>
    <string name="kayit_ol">Kayıt ol</string>
    <string name="cikis_yap">Çıkış Yap</string>
    <string name="aylik_yapilacaklar">Aylık Yapılacaklar</string>
    <string name="gunluk">Günlük</string>
    <string name="ekletusu">Ekle</string>
    <string name="textview">textView</string>
    <string name="aylik_hedefler">Aylık Hedefler</string>
    <string name="text">text</string>
    <string name="temizle">Temizle</string>
    <string name="ders_programi">Ders Programı</string>
    <string name="haftalik_ders_program">Haftalık Ders Programı</string>
    <string name="pazartesi">Pazartesi</string>
    <string name="sali">Salı</string>
    <string name="carsamba">Çarşamba</string>
    <string name="persembe">Perşembe</string>
    <string name="cuma">Cuma</string>
    <string name="yapilacaklar">Yapılacaklar</string>
    <string name="apply_text">Apply Text</string>
    <string name="save_data">Save Data</string>
    <string name="en_ncelikli">En Öncelikli</string>
    <string name="ncelikli">Öncelikli</string>
    <string name="en_az_ncelikli">En Az Öncelikli</string>
    <string name="g_ncelle">Güncelle</string>
    <string name="kaydet">Kaydet</string>
    <string name="en">En Öncelikli</string>
    <string name="on">Öncelikli</string>
    <string name="az">En Az Öncelikli</string>
    <string name="per_embe">Perşembe</string>
    <string name="ar_amba">Çarşamba</string>
    <string name="sal">Salı</string>
    <string name="ptesi">Pazartesi</string>
    <string name="cum">Cuma</string>
    <string name="gunc">Güncelle</string>
    <string name="kaydetders">Kaydet</string>
    <string name="tem">Temizle</string>
    <string name="sec">Seç</string>
    <string name="ekl">Ekle</string>
    <string name="nemli_bir_tarih_ekleyiniz">Önemli bir tarih ekleyiniz...</string>
    <string name="tarihi_ekleyiniz">Tarihi Ekleyiniz</string>
    <string name="saati_ekleyiniz">Saati Ekleyiniz</string>
    <string name="s">Seç</string>
    <string name="ekk">ekle</string>
    <string name="nemli_tarihler">Önemli Tarihler</string>
    <string name="tarih_giriniz1">Tarih Giriniz:</string>
    <string name="tarih_giriniz2">Tarih Giriniz:</string>
    <string name="tarih_giriniz3">Tarih Giriniz:</string>
    <string name="ekleB">Ekle</string>
    <string name="tarih_e1">Tarih Ekle:</string>
    <string name="tarih_e2">Tarih Ekle:</string>
    <string name="tarih_e3">Tarih Ekle:</string>

</resources>