<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCDCDC"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ogrenci_ajandasi"
        android:textColor="#264653"
        android:textStyle="bold"
        android:textSize="40sp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="220dp"
        />

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:hint="@string/kullan_c_ad"
        android:layout_marginStart="140dp"/>
    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:hint="@string/ifre"
        android:layout_marginStart="140dp"
        android:inputType="textPassword"/>
    <EditText
        android:id="@+id/edittext_cnf_password"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:hint="@string/sifre_dogrulama"
        android:layout_marginStart="140dp"
        android:inputType="textPassword"/>
    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/kayit_ol"
        android:textColor="#F4F4F4"
        android:background="#1D3557"
        android:layout_marginStart="170dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_login"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="160dp"
            android:layout_marginTop="10dp"
            android:text="@string/zaten_kayitliyim"
            android:textStyle="bold"
            />

    </LinearLayout>


</LinearLayout>


