<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCDCDC"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ogrenci_ajandasi"
        android:textColor="#264653"
        android:textStyle="bold"
        android:textSize="40sp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="150dp"
        />

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:hint="@string/kullan_c_ad"
        android:layout_marginStart="140dp"/>
    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:hint="@string/ifre"
        android:inputType="textPassword"
        android:layout_marginStart="140dp"/>
    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/giri_yap"
        android:textColor="#FFFFFF"
        android:background="#1D3557"
        android:layout_marginStart="155dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_register"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="170dp"
            android:layout_marginTop="10dp"
            android:text="@string/kay_t_ol"
            android:textStyle="bold"
            />

    </LinearLayout>


</LinearLayout>


