<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="800dp"
    android:background="#DCDCDC"
    android:orientation="vertical"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="20dp">

        <TextView
            android:id="@+id/month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/date"
            android:textColor="#E76F51"
            android:textSize="60sp"
            android:layout_marginTop="35dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="30sp"
            android:textColor="#E76F51"
            android:layout_marginStart="20dp"
            android:layout_marginTop="100dp"/>
        <TextView
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="30sp"
            android:textColor="#E76F51"
            android:layout_marginStart="250dp"
            android:layout_marginTop="15dp"/>
        <TextView
            android:id="@+id/textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Yapılacaklar ve Hedefler"
            android:textColor="#264653"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="200dp"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp">
        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp">
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/en_ncelikli"
                    android:textSize="20sp"
                    android:textColor="#264653"/>
                <TextView
                    android:id="@+id/enon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"/>

            </TableRow>
            <TableRow
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ncelikli"
                    android:textSize="20sp"
                    android:textColor="#264653"/>
                <TextView
                    android:id="@+id/on"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"/>
            </TableRow>

            <TableRow
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/en_az_ncelikli"
                    android:textSize="20sp"
                    android:textColor="#264653"/>
                <TextView
                    android:id="@+id/azon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"/>
            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/g_ncelle"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="140dp"
            android:onClick="showEdit" />

    </LinearLayout>





</LinearLayout>


